# cpp-stuff

./: Body.cpp  CMakeLists.txt  Food.cpp  Food.hpp  GUI.cpp  GUI.h  Snake.cpp  main.cpp  vector_math.h
src/: Animator.hpp  CMakeLists.txt  Grid.h  Renderer.h  Solver.h  main.cpp
tests/: CMakeLists.txt  GridTest.cpp  SolverTest.cpp
